# hermes-feegow-mcp

./: .env  .env.example  .gitignore  CHANGELOG.md  README.md  bootstrap.sh  imports.txt  pyproject.toml  run_mcp.sh
data/: eventos.json  reservas.json
docs/: 00_PROJECT_STATE.md  01_ARQUITETURA.md  02_REGRAS_NEGOCIO.md  03_WORKFLOWS.md  04_ROADMAP.md  05_DECISOES_ARQUITETURAIS.md  06_VISAO_DA_PLATAFORMA.md  07_DESENVOLVIMENTO.md  08_INTEGRACAO_FEEGOW.md  09_DISPONIBILIDADE_DE_AGENDA.md  09_SPRINT1_RESULTADO.md  10_COMPONENTES.md  11_CODE_INVENTORY.md  14_TESTS.txt  15_ENVIRONMENT.md  16_INSTALL.md  17_DEPLOY.md  18_BACKUP.md  19_DISASTER_RECOVERY.md  20_OPERATIONS.md  21_DECISAO_AGENDA_FEEGOW.md  ROADMAP.md  api-reference.md  architecture.md  business-rules.md  clinic-config.md  decisions.md  deployment.md  mcp-technical.md  mcp-tools.md  recovery.md  services.md  state-machine.md  validated-endpoints.md
scripts/: generate_knowledge.py  test_remarcacao.py  test_retorno.py  test_workflow.py
tests/: _test_agendamento_service.py.disabled  test_availability.py  test_available_schedule_direct.py  test_config_clinica.py  test_conversation.py  test_create_appointment.py  test_criar_agendamento.py  test_criar_paciente_live.py  test_dialog.py  test_dialog_feegow.py  test_discovery.py  test_event_store.py  test_exception.py  test_finalizar_pagamento.py  test_horarios_live.py  test_horarios_v2.py  test_identificar_paciente.py  test_intent.py  test_listar_agendamentos.py  test_locais.py  test_local_discovery.py  test_pagamento.py  test_payment_manager.py  test_remarcacao.py  (+9 more)
(+107 files in other folders)
