[project]
name = "ana-feegow"
version = "0.1.0"
description = "MCP Feegow para ANA - Clínica Magnólia"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "mcp>=1.0.0",
    "fastmcp>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
